[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Sprite.gd" type="Script" id=2]

[node name="Sprite_move" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 0.0140533, 592.0 ],
"_edit_vertical_guides_": [ 0.030014, 1365.39 ]
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 871.01
margin_top = 9.43414
margin_right = 1021.01
margin_bottom = 94.4341
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="step_value" type="Label" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 14.0
text = "Step : 150"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider_step" type="HSlider" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 34.0
max_value = 300.0
value = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 150.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed_value" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 150.0
margin_bottom = 60.0
text = "Speed : 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider_speed" type="HSlider" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 150.0
margin_bottom = 80.0
max_value = 10.0
value = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 10.2672
margin_top = 8.40143
margin_right = 159.267
margin_bottom = 93.4014
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite_x" type="Label" parent="VBoxContainer2"]
margin_right = 149.0
margin_bottom = 14.0
text = "x : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite_y" type="Label" parent="VBoxContainer2"]
margin_top = 18.0
margin_right = 149.0
margin_bottom = 49.0
text = "y : 0
"
[connection signal="value_changed" from="VBoxContainer/Slider_step" to="Sprite" method="_on_Slider_step_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Slider_speed" to="Sprite" method="_on_Slider_speed_value_changed"]
